--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^8.3"
+        "php": "^8.3",
+        "carminemm/units-conversion": "^1.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
